# grpc-lite

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  Taskfile.yml  build.zig  build.zig.zon  mise.toml
.github/workflows/: ci.yml  soak.yml
cmake/: grpc_liteConfig.cmake.in
examples/: architecture.cc  echo_client.zig  echo_server.cc  echo_server.zig  grpc_echo_client.cc  grpc_echo_server.cc  proto_echo_client.cc  proto_echo_roundtrip.sh  proto_echo_server.cc  proto_echo_smoke.sh
include/: proto3.hpp
include/grpc_lite/: channel.h  client_context.h  server.h  server_builder.h  server_context.h  service.h  status.h  stream.h  version.h
include/grpc_lite/proto3/: echo.h
include/grpcpp/: client_context.h  completion_queue.h  create_channel.h  ports_def.inc  ports_undef.inc  server.h  server_builder.h  server_context.h
include/grpcpp/generic/: async_generic_service.h
include/grpcpp/impl/: channel_interface.h  client_unary_call.h  proto_utils.h  rpc_method.h  rpc_service_method.h  server_callback_handlers.h  service_type.h
include/grpcpp/support/: async_stream.h  async_unary_call.h  byte_buffer.h  client_callback.h  config.h  message_allocator.h  method_handler.h  server_callback.h  status.h  stub_options.h  sync_stream.h
proto/: echo.proto
scripts/: clang-format.sh
src/: c.zig  call.zig  channel.cc  channel.zig  client_call.cc  client_context.cc  compression.zig  deadline.zig  frame.zig  grpcpp_channel.cc  grpcpp_server.cc  message.zig  metadata.zig  protobuf_adapter.zig  root.zig  server.cc  server.zig  server_builder.cc  server_context.cc  service.zig  status.cc  status.zig  stream.cc  version.cc  version.zig
src/core/: grpc_frame.cc  grpc_frame.h  http2_transport.cc  transport.h  uv_loop.cc
tests/: compatibility_test.cc  core_test.cc  grpcpp_test.cc  proto3_wire_test.cc  protobuf_adapter_test.zig  protobuf_codegen_test.zig  protocol_test.cc  public_api_test.zig  runtime_test.cc  stress_test.cc  test_support.h
tests/consumer/: run_raw.sh
tests/consumer/raw/: build.zig
tests/consumer/raw/src/: main.zig
tests/official/: README.md  go.mod  go.sum  http2-test-python3.patch  interop_client.zig  interop_server.zig  protobuf_test.zig  run_http2.sh  run_http2_edge.sh  run_unary.sh  validate_http2_report.py
tools/: build_native.sh  grpc_lite_upb_plugin.cc  test_libuv_sanitizer.sh
tools/sanitizer-compat/sanitizer/: linux_syscall_hooks.h
